# scurl

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  __init__.py  config.toml  pyproject.toml  requirements.txt
app/: __init__.py  scurl.py
app/api/: server.py
app/api/router/: analyze.py  scans.py
app/api/schema/: map_result.py
app/api/static/: index.html  script.js  style.css
app/cli/: args.py  main.py
app/cli/output/: __init__.py  formatter.py  infer.py  sections.py  store_output.py
app/router/: analyze.py
app/routes/: scan.py
app/schema/: map_error.py  map_result.py
cli/: scurl.py
cli/args/: __init__.py
cli/output/: __init__.py  assessment.py  sections.py  store_output.py
core/engine/: classification.py  context_aply.py  dependencies.py  engine.py  insights.py  main.py  rule_registry.py  scurl.py  typeError_request.py
core/engine/analysis/: classification.py  classify_attacks.py  insights.py
core/engine/pipeline/: __init__.py  collect.py  collect_response.py  context_apply.py  execute.py  get_structure.py  meta_attribute.py  respond.py  response_builder.py  response_validator.py  result_engine.py  scan_metadata.py  score.py  target_structure.py  url_validator.py  validate.py  validate_response.py  validate_url.py  validate_url_input.py
core/engine/registry/: context_apply.py  rule_registry.py
core/engine/url_extract/: get_structure.py
core/heuristics/: __init__.py  registry.py
core/math/: __init__.py  exponential_decay.py  jaccard_similarity.py  levenshtein.py  n_gram.py  sequence_matcher.py  shannon_entropy.py  sigmoid.py  value_normalizator.py
core/models/: body_rule.py  http_result.py  result_base.py  scan_context.py  scan_result.py  scan_rule.py  sub_score.py
core/network/: __init__.py  config_net.py  fetch_rdap.py  get_request.py
core/parsers/: html_parser.py  parse_issue_ssl.py  url_structure_extract.py
core/scoring/: dependencies.py
datasets/keywords/: shortener.py
datasets/wordlists/: brands.txt  wordlist_loader.py
doc/: CLI.md  INSTALLATION.md
docs/: API.md  CLI.md  INSTALLATION.md  architecture.md  calibration.md  heuristics.md  scoring.md
features/: normalize_domain.py
heuristics/: __init__.py  registry.py
heuristics/html/: external_script.py  favicon_check.py  form_action.py  image_check.py  password_input.py  redirect_check.py
heuristics/server/: nameserver_diversity.py
heuristics/url/: character.py  parts.py
parser/: html_parser.py
providers/database/: cache.py  connection.py  repository.py
providers/dns/: info_dns.py
providers/http/: client.py  connect.py  headers.py  retry.py
providers/rdap/: client.py  fetch_rdap.py
providers/safebrowsing/: client.py
providers/ssl/: info_ssl.py
scoring/: dependencies.py
scurl/: __init__.py
test/: test_engine.py  test_math.py  test_request.py  test_response.py  test_server.py  test_url_structure.py
(+92 files in other folders)
