[project]
name = "scurl"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Juan Reis", email = "teixeiradosreisjuan@gmail.com"},
]
dependencies = [
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "filelock==3.25.2",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "python-dateutil==2.9.0.post0",
    "python-whois==0.9.6",
    "requests==2.32.5",
    "requests-file==3.0.1",
    "six==1.17.0",
    "tldextract==5.3.1",
    "urllib3==2.6.3",
    "anysqlite==0.0.5",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "colorama==0.4.6",
    "deep-translator==1.11.4",
    "dep-logic==0.5.2",
    "distlib==0.4.0",
    "dnspython==2.8.0",
    "findpython==0.7.1",
    "googletrans==4.0.2",
    "hishel==1.1.9",
    "id==1.6.1",
    "installer==0.7.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "msgpack==1.1.2",
    "orjson==3.11.8",
    "packaging==26.0",
    "pbs-installer==2026.3.20",
    "pdm==2.26.6",
    "platformdirs==4.9.4",
    "Pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "python-discovery==1.2.0",
    "python-dotenv==1.2.2",
    "resolvelib==1.2.1",
    "rich==14.3.3",
    "selectolax==0.4.7",
    "shellingham==1.5.4",
    "socksio==1.0.0",
    "soupsieve==2.8.3",
    "tomlkit==0.14.0",
    "tqdm==4.67.3",
    "truststore==0.10.4",
    "typing-extensions==4.15.0",
    "unearth==0.18.2",
    "virtualenv==21.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
